// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MOVIEMEDALLIONITEM SNAPSHOTS TESTS active MovieMedallionItem should not be changed 1`] = `
<div
  class="container"
  role="div-MedallionItem"
>
  <div
    class="container__content"
  >
    <div
      class="container__contentBlock"
    >
      <div />
    </div>
  </div>
  <div
    class="container__caption"
  >
    Текст
  </div>
</div>
`;

exports[`MOVIEMEDALLIONITEM SNAPSHOTS TESTS inactive MovieMedallionItem should not be changed 1`] = `
<div
  class="container container_inactive"
  role="div-MedallionItem"
>
  <div
    class="container__content"
  >
    <div
      class="container__contentBlock"
    >
      <div />
    </div>
  </div>
  <div
    class="container__caption"
  >
    Текст
  </div>
</div>
`;
